fix the extra padding issue with modal

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ body {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .one {
     width: max(250px, 25%);
